# ViscosityPredictorPublic

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: training.toml
dataset/: README.md
development/: train_interpolation_model.py
pretrained_model/: LICENSE.md  MODEL_CARD.md  manifest.json
pretrained_model/seen/: metadata.json
pretrained_model/seen/models/: seed_1.pt  seed_2.pt  seed_3.pt  seed_4.pt  seed_5.pt
pretrained_model/unseen/: metadata.json
pretrained_model/unseen/models/: seed_1.pt  seed_2.pt  seed_3.pt  seed_4.pt  seed_5.pt
scripts/: predict.py  train.py  verify_pretrained_models.py
src/viscosity_predictor/: __init__.py  artifacts.py  config.py  data.py  descriptors.py  final_model.py  prediction.py  preprocessing.py  regularization.py  runtime.py  splits.py  training.py  workflow.py
tests/: test_config.py  test_data.py  test_descriptors.py  test_final_model.py  test_predict_cli.py  test_prediction.py  test_preprocessing.py  test_regularization.py  test_runtime.py  test_splits.py  test_training.py  test_workflow.py
