[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viscosity-predictor-public"
version = "0.1.0"
description = "Train and use a jointly regularized neural network for pure-component viscosity prediction."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Yuya Murakami"},
]
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "torch>=2.0.0",
  "murakami_lab_modules @ git+https://github.com/yuya-murakami-su/murakami_lab_modules.git@v1.1.3",
  "rdkit==2026.3.4",
  "matminer==0.10.1",
  "pymetis>=2025.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.urls]
Repository = "https://github.com/yuya-murakami-su/ViscosityPredictorPublic"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
